--- a/events/2024/02/20.yml
+++ b/events/2024/02/20.yml
@@ -1,4 +1,3 @@
-# Evento COFOCHILEX UK
-
+title: Evento COFOCHILEX UK
 tema: Invitado Principal Argentina
 descripcion: Et voluptatem iusto sed quod maxime autem exercitationem. Similique sed labore amet natus non fugit fugit. Ut a in officiis. Laborum voluptas ea commodi provident quidem nemo.
